[package]
name = "mqtt_ping_pong"
version = "0.1.0"
authors = ["Emmanuel Bosquet <bjokac@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/sync_ping.rs"
name = "sync_ping"

[[bin]]
path = "src/sync_pong.rs"
name = "sync_pong"

[[bin]]
path = "src/async_ping.rs"
name = "async_ping"

[[bin]]
path = "src/async_pong.rs"
name = "async_pong"

[dependencies]
paho-mqtt = "0.6.0"
futures = "0.1" # The newer version 0.3.4 doesn't have the wait() method
